<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Titipin</string>
    <string name="title_homepage">Homepage</string>
    <string name="title_store">Store</string>
    <string name="title_deposit">Deposit</string>
    <string name="title_product">Product</string>
    <string name="title_category">Category</string>
    <string name="format_show_list">: %s</string>
    <string name="format_date_deposit">%s - %s</string>
    <string name="delete_data">Delete data</string>
    <string name="msg_delete_data">Are you sure you want to delete the data %s?</string>
    <string name="msg_delete_data_store">Are you sure you want to delete store %s? If you delete store %s, the deposit data associated with store %s will also be deleted</string>
    <string name="msg_delete_data_product">Are you sure you want to delete product %s? If you delete product %s, the corresponding product %s data in the deposit will also be deleted.</string>
    <string name="msg_delete_data_deposit">Are you sure want to delete the data deposit %s?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="success_delete_data">Successfully delete data %s</string>
    <string name="success_delete_data_deposit">Successfully delete data deposit</string>
    <string name="data_store_empty">No store data found</string>
    <string name="data_category_empty">No category data found</string>
    <string name="data_deposit_empty">No deposit data found</string>
    <string name="data_product_empty">No product data found</string>
    <string name="data_deposit_not_yet_finish">No unfinished deposit data found</string>
    <string name="please_add_product_or_store_first">Please add product / store data first</string>
    <string name="please_add_category_first">Please add category data first</string>
    <string name="update">Update</string>
    <string name="add_category">Add Category</string>
    <string name="add_product">Add Product</string>
    <string name="add_store">Add Store</string>
    <string name="category_name">Category Name</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="store_name">Store Name</string>
    <string name="store_address">Address</string>
    <string name="owner_name">Owner Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="success_add_category">Successfully add category</string>
    <string name="success_update_category">Successfully update category</string>
    <string name="category_must_be_filled">Category must be filled!</string>
    <string name="success_update_store">Successfully update store</string>
    <string name="success_update_product">Successfully update product</string>
    <string name="success_add_store">Successfully add store</string>
    <string name="success_add_product">Successfully add product</string>
    <string name="add_deposit">Add Deposit</string>
    <string name="success_add_deposit">Successfully add deposit</string>
    <string name="success_update_deposit">Successfully update data deposit</string>
    <string name="success_update_product_deposit">Successfully update the deposit product data</string>
    <string name="quantity_add_product">Quantity (Unit/Kg))</string>
    <string name="save">Save</string>
    <string name="data_store_and_start_date_must_be_filled">Store Data / Deposit Date must be filled!</string>
    <string name="data_product_in_deposit_is_empty">The product data in the deposit is empty, probably because you deleted the product data associated with this deposit</string>
    <string name="add_product_deposit">Add Deposit Item</string>
    <string name="choose_start_date">Select start date</string>
    <string name="update_deposit">Update Deposit</string>
    <string name="msg_total_product_empty">Product quantity must be filled!</string>
    <string name="success_add_product_in_deposit">Successfully add items to the deposit</string>
    <string name="start_date_deposit">Deposit Start Date</string>
    <string name="msg_product_quantity_must_be_filled">Data product quantity must be filled!</string>
    <string name="product_name_must_be_filled">Product name must be filled!</string>
    <string name="product_price_must_be_filled">Product price must be filled!</string>
    <string name="detail_deposit">Deposit Detail</string>
    <string name="finish">Finish</string>
    <string name="history_deposit">Deposit History</string>
    <string name="value_cant_empty">The value of the number of return items cannot be empty</string>
    <string name="value_cant_more_than_quantity">Value cannot be more than the amount of product deposited</string>
    <string name="value_return_quantity_must_be_filled">Ensure the number of return items in each product data is filled in</string>
    <string name="deposit">DEPOSIT</string>
    <string name="status_deposit_done">Deposit Complete</string>
    <string name="list_product">List Product</string>
    <string name="update_status_deposit">Mark Deposit Complete</string>
    <string name="total_sales">Total Sales</string>
    <string name="rp_0_00">Rp0</string>
    <string name="please_add_product_first">Please add product first</string>
    <string name="quantity_cant_zero">Quantity cannot be 0</string>
    <string name="deposit_caps">DEPOSIT</string>
    <string name="finish_caps">FINISH</string>
    <string name="total_product">Quantity Product</string>
    <string name="total_product_return">Quantity Product Return</string>
    <string name="total_product_sold">Total Products Sold</string>
    <string name="total">Total</string>
    <string name="price">Price</string>
    <string name="category">Category</string>
    <string name="unfinished_deposit">Unfinished Deposit</string>
    <string name="t_i_t_i_p_i_n">T I T I P I N</string>
    <string name="save_store_name">Save Store Name</string>
    <string name="feature_deposit">Deposit Feature</string>
    <string name="text_desc_feature_deposit">Set the deposit of the items you deposited, the number of items, the number of items returned, and the items sold.</string>
    <string name="feature_product">Product Feature</string>
    <string name="text_desc_feature_product">Add your product, enter the price and adjust it to the category that you have added.</string>
    <string name="feature_category">Category Feature</string>
    <string name="text_desc_feature_category">Customize categories for easy grouping of added products</string>
    <string name="feature_store">Store Feature</string>
    <string name="text_desc_feature_store">Save all the data of subscription stores where you usually leave your products</string>
    <string name="text_desc_titipin">Titipin is an application for recording consignment of product (deposit). \With 4 main features, category feature, product feature, deposit feature, store feature</string>
    <string name="greeting_business_name">%s %s</string>
    <string name="store_name_must_be_filled">Store name must be filled!</string>
    <string name="store_address_must_be_filled">Store address must be filled!</string>
    <string name="store_owner_name_must_be_filled">Owner name must be filled!</string>
    <string name="store_phone_number_must_be_filled">Owner cell phone number is required!</string>
    <string name="business_name">Business Name</string>
    <string name="helper_business_name">Please add your business name</string>
    <string name="text_greeting">Halo!</string>
    <string name="logout">Logout</string>
    <string name="login_with_google">Login with Google</string>
    <string name="welcome_titipin">Welcome \n<font color="#775842">Titipin</font></string>
    <string name="please_sign_in_first">Please login first!</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="good_morning">Good morning!</string>
    <string name="good_afternoon">Good afternoon!</string>
    <string name="good_evening">Good evening!</string>
    <string name="good_night">Good night !</string>
    <string name="data_category">Category data</string>
    <string name="data_product">Product data</string>
    <string name="data_deposit">Deposit data</string>
    <string name="data_store">Store data</string>
    <string name="data_product_deposit">Deposit product data</string>
    <string name="success_backup">successfully backup</string>
    <string name="failure_backup">failed backup</string>
    <string name="success_restore">successfully restore</string>
    <string name="failure_restore">failed restore</string>
    <string name="logout_account">Logout account</string>
    <string name="msg_logout_account">Are you sure want to logout from your account?</string>
    <string name="setting">Setting</string>
    <string name="choose_language">Choose language</string>
    <string name="indonesian_lang" translatable="false">Indonesia</string>
    <string name="english_lang" translatable="false">Inggris</string>
    <string name="history_sales_each_month">Monthly sales history</string>
    <string name="app_language">App language</string>
    <string name="last_backup_data">Lastly data backup: </string>
    <string name="delete_all_data">Delete all data</string>
    <string name="msg_delete_all_data">Are you sure want to delete all data?</string>
    <string name="success_delete_all_data">Successfully delete all data</string>
    <string name="total_sales_each_month">Total Sales Each Month</string>

</resources>