<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_homepage">

    <fragment
        android:id="@+id/navigation_homepage"
        android:name="id.allana.titipbarangku.ui.homepage.HomepageFragment"
        android:label="@string/title_homepage"
        tools:layout="@layout/fragment_homepage" />

    <fragment
        android:id="@+id/navigation_store"
        android:name="id.allana.titipbarangku.ui.store.StoreFragment"
        android:label="@string/title_store"
        tools:layout="@layout/fragment_store" />

    <fragment
        android:id="@+id/navigation_deposit"
        android:name="id.allana.titipbarangku.ui.deposit.DepositFragment"
        android:label="@string/title_deposit"
        tools:layout="@layout/fragment_deposit" />
    <fragment
        android:id="@+id/navigation_product"
        android:name="id.allana.titipbarangku.ui.product.ProductFragment"
        android:label="@string/title_product"
        tools:layout="@layout/fragment_product" />
    <fragment
        android:id="@+id/navigation_category"
        android:name="id.allana.titipbarangku.ui.category.CategoryFragment"
        android:label="@string/title_category"
        tools:layout="@layout/fragment_category" />
</navigation>