<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.product.ProductBottomSheetFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_store_name"
        style="@style/TextInputLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_store_name"
            style="@style/EditText"
            android:hint="@string/store_name"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_store_address"
        style="@style/TextInputLayout"
        app:layout_constraintTop_toBottomOf="@id/til_store_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_store_address"
            style="@style/EditText"
            android:hint="@string/store_address" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_store_owner_name"
        style="@style/TextInputLayout"
        app:layout_constraintTop_toBottomOf="@id/til_store_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_store_owner_name"
            style="@style/EditText"
            android:hint="@string/owner_name" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_store_phone_number"
        style="@style/TextInputLayout"
        app:layout_constraintTop_toBottomOf="@id/til_store_owner_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_store_phone_number"
            style="@style/EditText"
            android:hint="@string/phone_number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_store"
        style="@style/Button"
        android:text="@string/add_store"
        app:layout_constraintTop_toBottomOf="@+id/til_store_phone_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>