<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.product.ProductBottomSheetFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pick_product"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:hint="@string/title_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/text_dropdown_product"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"
            tools:text="Happy" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_product_quantity"
        style="@style/TextInputLayout"
        app:layout_constraintTop_toBottomOf="@id/pick_product"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_product_quantity"
            style="@style/EditText"
            android:hint="@string/quantity_add_product"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_product"
        style="@style/Button"
        android:text="@string/add_product"
        app:layout_constraintTop_toBottomOf="@+id/til_product_quantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_finish"
        style="@style/ButtonSecondary"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_product"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_product_in_deposit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_finish"
        tools:listitem="@layout/item_product_in_deposit"/>

</androidx.constraintlayout.widget.ConstraintLayout>