<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.deposit.DepositFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/store_asset"
        android:layout_width="@dimen/_125sdp"
        android:layout_height="@dimen/_125sdp"
        android:src="@drawable/ic_store_asset"
        android:layout_margin="@dimen/_36sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pick_store"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:hint="@string/title_store"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/store_asset">

        <AutoCompleteTextView
            android:id="@+id/text_dropdown_store"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"
            tools:text="Toko"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/helper_pick_date"
        style="@style/Nunito.10.Body"
        android:textColor="@color/purple_500"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="@+id/pick_store"
        app:layout_constraintStart_toStartOf="@+id/pick_store"
        app:layout_constraintTop_toBottomOf="@+id/pick_store"
        android:text="@string/start_date_deposit" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_pick_date"
        android:layout_width="@dimen/_48sdp"
        android:layout_height="@dimen/_48sdp"
        android:src="@drawable/ic_date"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/helper_pick_date"
        app:layout_constraintStart_toStartOf="@id/pick_store"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_start_date_deposit"
        style="@style/Nunito.14.Title"
        android:layout_marginStart="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_pick_date"
        app:layout_constraintEnd_toEndOf="@+id/pick_store"
        app:layout_constraintStart_toEndOf="@+id/btn_pick_date"
        app:layout_constraintTop_toTopOf="@+id/btn_pick_date"
        android:text="@string/choose_start_date" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_deposit"
        style="@style/Button"
        android:text="@string/add_deposit"
        app:layout_constraintTop_toBottomOf="@+id/btn_pick_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>