<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?attr/actionBarSize"
    tools:context=".ui.homepage.HomepageFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/total_sales"
        style="@style/Nunito.18.Title"
        android:layout_margin="@dimen/_8sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/total_sales" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_total_amount_sales"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="@id/total_sales"
        app:layout_constraintStart_toStartOf="@+id/total_sales"
        app:layout_constraintTop_toBottomOf="@id/total_sales"
        app:strokeColor="@android:color/darker_gray"
        app:strokeWidth="@dimen/_1sdp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_current_month"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito"
                android:textSize="@dimen/_16ssp"
                android:textColor="@color/purple_500"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                tools:text="Agustus" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_total_amount_sales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito"
                android:textSize="@dimen/_16ssp"
                android:textColor="@color/purple_500"
                android:layout_margin="@dimen/_8sdp"
                android:text="@string/rp_0_00" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/deposit"
        style="@style/Nunito.18.Title"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_24sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_total_amount_sales"
        android:text="@string/unfinished_deposit" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_unfinished_deposit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deposit"
        tools:listitem="@layout/item_deposit" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_state_data_empty"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:src="@drawable/ic_empty_data"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deposit"
        tools:visibility="visible" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_state_data_empty"
        style="@style/Nunito.10.Body"
        android:text="@string/data_deposit_not_yet_finish"
        android:textAlignment="center"
        android:visibility="gone"
        android:layout_marginTop="@dimen/_4sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_state_data_empty"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>